Changed the alignment on the press icon. Fixed 54

--- a/sass/templates/_misc.scss
+++ b/sass/templates/_misc.scss
@@ -37,7 +37,8 @@
 
   .inline-icon {
     margin-right: $quarter-spacing-unit;
-    vertical-align: middle;
+    vertical-align: bottom;
+    margin-bottom: 2px;
   }
 
 	.square {
